apps/steam/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      hostNetwork: true
      hostname: steam
      runtimeClassName: nvidia
      nodeSelector:
        nvidia.com/gpu.product: NVIDIA-GeForce-GTX-1060-6GB-SHARED
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1G
      containers:
        - name: app
          image: lscr.io/linuxserver/steam:latest
          securityContext:
            privileged: true
          resources:
            requests:
              memory: 128M
            limits:
              memory: 1G
              nvidia.com/gpu: '1'
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels: &labels
    app.kubernetes.io/component: app
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal-route
  annotations:
    internal-dns.alpha.kubernetes.io/target: internal.beaver-cloud.xyz
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-beaver-cloud
      namespace: envoy-gateway-system
  hostnames:
    - steam.beaver-cloud.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: app-service
          port: 80
          weight: 1
